Fix bug for customize section on tablet

--- a/static/_responsive.sass
+++ b/static/_responsive.sass
@@ -172,7 +172,7 @@
 
 @media screen and (min-width: 480px)
   #customize dl
-    height: 380px
+    height: 420px
 
 @media screen and (min-width: 530px)
   #main-offer ol
@@ -286,9 +286,6 @@
     &::after
       @include content(block, 260px, 100%)
       background: url('images/photos/bkgd-meds.jpg') center / cover no-repeat fixed
-
-  #customize dl
-    height: 250px
 
   footer ul
     display: inline-block
@@ -420,6 +417,9 @@
 
           &::before
             border-width: 10px 7px 10px 0
+
+  #customize dl
+    height: 250px
 
 @media screen and (min-width: 1150px)
   nav ul
