--- a/static/_screen.sass
+++ b/static/_screen.sass
@@ -640,7 +640,7 @@ nav ul
   dl
     @include flexbox(column, flex-start)
     align-items: center
-    height: 850px
+    height: 780px
 
     dt
       @include bottom_stroke(2px, 0 auto, 18px)
